[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/editor_input_map/action.gd" type="Script" id=1]

[node name="Action" type="VBoxContainer"]
margin_right = 372.0
margin_bottom = 28.0
script = ExtResource( 1 )

[node name="HBox" type="HBoxContainer" parent="."]
margin_right = 372.0
margin_bottom = 24.0

[node name="Name" type="Button" parent="HBox"]
margin_right = 111.0
margin_bottom = 24.0
size_flags_horizontal = 3
toggle_mode = true
text = "name_of_action"

[node name="Deadzone" type="SpinBox" parent="HBox"]
margin_left = 115.0
margin_right = 189.0
margin_bottom = 24.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="Add" type="MenuButton" parent="HBox"]
margin_left = 193.0
margin_right = 268.0
margin_bottom = 24.0
focus_mode = 2
text = "Add Input"
flat = false
items = [ "Key", null, 0, false, false, 0, 0, null, "", false, "Joy Button", null, 0, false, false, 1, 0, null, "", false, "Joy Axis", null, 0, false, false, 2, 0, null, "", false, "Mouse Button", null, 0, false, false, 3, 0, null, "", false ]

[node name="Delete" type="Button" parent="HBox"]
margin_left = 272.0
margin_right = 372.0
margin_bottom = 24.0
text = "Delete Action"

[node name="Inputs" type="VBoxContainer" parent="."]
margin_top = 28.0
margin_right = 372.0
margin_bottom = 28.0

[connection signal="toggled" from="HBox/Name" to="." method="_on_Name_toggled"]
[connection signal="value_changed" from="HBox/Deadzone" to="." method="_on_Deadzone_value_changed"]
[connection signal="pressed" from="HBox/Delete" to="." method="_on_Delete_pressed"]
